# needle-core

./: Cargo.toml  LICENSE  Makefile  deny.toml  needle-core.cdx.json  sbom.spdx.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
docker/: Makefile  base.dockerfile  linux.dockerfile  shader.dockerfile  windows.dockerfile
src/: error.rs  lib.rs  texture.rs  time.rs
src/base/: imgui_state.rs  mod.rs
src/buffers/: mod.rs  vertex.rs
src/config/: fps.rs  mod.rs  position.rs  test.rs  text.rs  time.rs
src/notify/: linux.rs  mod.rs  windows.rs
src/renderer/: mod.rs  shader.rs  text.rs
src/utils/: fonts.rs  mod.rs  test.rs
