[package]
name = "needle-core"
version = "0.2.1"
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
bytemuck = "1.20.0"
chrono = "0.4.38"
dialog = "0.3.0"
directories = "6.0.0"
font-loader = "0.11.0"
glyphon = "0.9.0"
serde = {version = "1.0.215", features = ["derive"]}
thiserror = "2.0.12"
toml = "0.9.2"
wgpu = "25.0.0"
winit = { version = "0.30" }

[target.'cfg(windows)'.dependencies]
win-msgbox = "0.2.1"
