[package]
name = "needle-core"
version = "0.2.1"
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
bytemuck = "1.20"
chrono = "0.4"
dialog = "0.3"
directories = "6.0"
font-loader = "0.11"
glyphon = "0.9"
imgui = "0.12"
imgui-wgpu = "0.25"
imgui-winit-support = "0.13"
serde = {version = "1.0.215", features = ["derive"]}
thiserror = "2.0.12"
toml = "0.9.2"
wgpu = "25.0"
winit = { version = "0.30" }

[target.'cfg(windows)'.dependencies]
win-msgbox = "0.2.1"
